--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
     <servlet-class>me.geso.avans.AvansServlet</servlet-class>
     <init-param>
       <param-name>class</param-name>
-      <param-value>net.moznion.javadocio.badge.controller.RootController</param-value>
+      <param-value>net.moznion.javadocio.badges.controller.RootController</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
