--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 		<avans.version>1.0.0</avans.version>
 		<tomcat.version>7.0.56</tomcat.version>
 		<jetty.version>9.2.6.v20141205</jetty.version>
+		<slf4j.version>1.7.10</slf4j.version>
+		<logback.version>1.1.2</logback.version>
 	</properties>
 
 	<dependencies>
@@ -24,14 +26,20 @@
 			<version>${avans.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-simple</artifactId>
-			<version>1.7.7</version>
-		</dependency>
-		<dependency>
 			<groupId>me.geso</groupId>
 			<artifactId>mech2</artifactId>
 			<version>0.2.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${logback.version}</version>
 		</dependency>
 
 		<dependency>
@@ -51,6 +59,13 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.1.0</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.14.8</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
