--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
 			<artifactId>mech2</artifactId>
 			<version>0.2.1</version>
 		</dependency>
+		<dependency>
+			<groupId>me.geso</groupId>
+			<artifactId>tinyorm</artifactId>
+			<version>0.31.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -54,6 +59,13 @@
 			<artifactId>jetty-server</artifactId>
 			<version>${jetty.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>9.3-1102-jdbc41</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>javax.servlet</groupId>
